# deephold-db

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  20260617_38cd7d74eb4c_widen_fx_ccy_columns.py  20260617_630553ec4234_widen_macro_observations_value.py
config/: paper_universe.yaml  series_registry.yaml  tickers.yaml  vendors.yaml
docs/: data_dictionary.md  methodology.md  paper-replication.md  sources.md  tutorial_proxmox_umzug.md
docs/handbuch/: Makefile  README.md  deephold_db.tex
docs/handbuch/appendix/: a_glossar.tex  b_befehle.tex  c_schema.tex  d_literatur.tex
docs/handbuch/chapters/: 00_vorwort.tex  01_einfuehrung.tex  02_grundlagen.tex  03_infrastruktur.tex  04_datenmodell.tex  05_vendor_adapter.tex  06_etl_pipeline.tex  07_notebook.tex  08_tui.tex  09_tests.tex  10_analytics_paper.tex
scripts/: build_notebook.py  ingest_all.py  paper_replicate.py  query_db.py  seed_paper_data.py
sql/: .gitkeep
src/deephold_db/: __init__.py
src/deephold_db/analytics/: __init__.py  backtest.py  metrics.py  returns.py  vam.py
src/deephold_db/db/: __init__.py  models.py  session.py
src/deephold_db/dq/: __init__.py
src/finance_data/: __init__.py
tests/: conftest.py  test_config.py  test_ecb.py  test_fred.py  test_models.py  test_yahoo.py
tests/analytics/: test_metrics.py
tui/: README.md  package.json  tsconfig.json
tui/scripts/: check-db.ts
tui/src/: App.tsx  index.tsx  types.ts
tui/tests/: integration.test.ts
(+24 files in other folders)
