[tool.poetry]
name = "deephold-db"
version = "0.1.0"
description = "Retail/Research financial market database"
authors = ["Research <research@example.invalid>"]
readme = "README.md"
package-mode = true
packages = [{include = "deephold_db", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
polars = "^0.20"
numpy = "^1.26"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg = {extras = ["binary"], version = "^3.1"}
prefect = "^2.16"
pandera = "^0.18"
great-expectations = "^0.18"
structlog = "^24.1"
tenacity = "^8.2"
httpx = "^0.27"
requests = "^2.31"
yfinance = "^0.2"
fredapi = "^0.5"
python-dotenv = "^1.0"
pydantic = "^2.6"
pydantic-settings = "^2.2"
pyyaml = "^6.0"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-postgresql = "^6.0"
pytest-cov = "^5.0"
ruff = "^0.3"
mypy = "^1.8"
ipython = "^8.0"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pandera]
# Schemas werden in src/deephold_db/dq/ definiert
